package demo.tt.lucasstrategy.API;

public interface APIStrategy {
    String getData();
}
