@startuml
title "Class diagram design pattern strategy: API error handling"
class ExternalController{
+ strategyContext: StrategyContext
+ makeAPICall(): Response
+ setStrategy(): void
}

class StrategyContext{
+ setStrategy(): void
- strategy: ExternalErrorStrategy
}

interface APIStrategy{
- getData(): any
}

class BookingAPICall{
- getData(): any
}

class BookingErrorHandler{
- getData(): any
}
class FlightErrorHandler{
- getData(): any
}
class FlightAPICall{
- getData(): any
}

ExternalController --|> StrategyContext
StrategyContext --|> APIStrategy

BookingErrorHandler ..|> APIStrategy
BookingAPICall ..|> APIStrategy
FlightAPICall ..|> APIStrategy
FlightErrorHandler ..|> APIStrategy

@enduml